--- a/students/templates/students/events_log.html
+++ b/students/templates/students/events_log.html
@@ -1,22 +1,23 @@
 {% extends "students/base.html" %}
 
+{% load i18n %}
 {% load static from staticfiles %}
 
-{% block meta_title %}Події{% endblock meta_title %}
+{% block meta_title %}{% trans "Log" %}{% endblock meta_title %}
 
-{% block title %}Події{% endblock title %}
+{% block title %}{% trans "Log" %}{% endblock title %}
 
 
 {% block content %}
 
 <!-- Start Groups Listing -->
 {% if events_log %}
-    <h3>Список подій</h3>
+    <h3>{% trans "Log list" %}</h3>
     <table class="table table-hover table-striped table-condensed">
         <thead>
         <tr>
-            <th>Час події</th>
-            <th>Опис події</th>
+            <th>{% trans "Date" %}</th>
+            <th>{% trans "Description" %}</th>
         </tr>
         </thead>
 
@@ -30,7 +31,7 @@
         </tbody>
     </table>
 {% else %}
-    <p>Події відсутні</p>
+    <p>{% trans "No log yet" %}</p>
 {% endif %}
 <!-- End Groups Listing -->
 
