--- a/students/templates/students/groups_confirm_delete.html
+++ b/students/templates/students/groups_confirm_delete.html
@@ -1,17 +1,18 @@
 {% extends "students/base.html" %}
 
+{% load i18n %}
 {% load static from staticfiles %}
 
-{% block meta_title %}Видалення групи{% endblock meta_title %}
+{% block meta_title %}{% trans "Delete Group" %}{% endblock meta_title %}
 
-{% block title %}Видалення групи{% endblock title %}
+{% block title %}{% trans "Delete Group" %}{% endblock title %}
 
 {% block content %}
     <form action="{% url "groups_delete" object.id %}" method="post">
         {% csrf_token %}
-        <p>Ви дійсно бажаєте видалити групу "{{ object }}"?</p>
-        <input type="submit" value="Так" name="delete_button" class="btn btn-danger">
-        <input type="submit" value="Ні" name="cancel_button" class="btn btn-default">
+        <p>{% blocktrans %}Do you really want to delete group "{{ object }}"?{% endblocktrans %}</p>
+        <input type="submit" value="{% trans "Yes" %}" name="delete_button" class="btn btn-danger">
+        <input type="submit" value="{% trans "No" %}" name="cancel_button" class="btn btn-default">
         <br>
     </form>
 {% endblock content %}
