--- a/students/templates/students/students_add_edit.html
+++ b/students/templates/students/students_add_edit.html
@@ -1,5 +1,6 @@
 {% extends "students/base.html" %}
 
+{% load i18n %}
 {% load static from staticfiles %}
 {% load crispy_forms_tags %}
 
@@ -9,7 +10,7 @@
 
 {% block status_message %}
     {% if form.errors %}
-        <div class="alert alert-danger" role="alert">Будь-ласка, виправте наступні помилки:</div>
+        <div class="alert alert-danger" role="alert">{% trans "Please, correct the following errors" %}:</div>
     {% endif %}
 {% endblock %}
 
