--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -49,7 +49,7 @@
                     <strong>{% trans "Group" %}:</strong>
                     <select>
                         {% block group_menu %}
-                        <option value="">{% trans "All Students" %}Усі Студенти</option>
+                        <option value="">{% trans "All Students" %}</option>
                         {% for group in GROUPS %}
                             <option value="{{ group.id }}" {% if group.selected %} selected="1" {% endif %}>
                                 {{ group.title }} {% if group.leader %}, {{ group.leader }}{% endif %}
@@ -191,6 +191,7 @@
     {#<script src="{{ PORTAL_URL }}{% static "js/jquery.form.min.js" %}"></script>#}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js"></script>
 
+    <script src="{% url 'django.views.i18n.javascript_catalog' %}"></script>
     <script src="{{ PORTAL_URL }}{% static "js/main.js" %}"></script>
 
     {% block extra_js %}{% endblock extra_js %}
