--- a/studentsdb/templates/registration/login.html
+++ b/studentsdb/templates/registration/login.html
@@ -1,10 +1,11 @@
 {% extends "students/base.html" %}
 
+{% load i18n %}
 {% load static from staticfiles %}
 
-{% block meta_title %}Вхід{% endblock meta_title %}
+{% block meta_title %}{% trans "Login" %}{% endblock meta_title %}
 
-{% block title %}Вхід{% endblock title %}
+{% block title %}{% trans "Login" %}{% endblock title %}
 
 {% block status_message %}
     {% if form.errors %}
@@ -12,7 +13,7 @@
             {% if form.non_field_errors %}
                 {{ form.non_field_errors.as_text }}
             {% else %}
-                Please, correct the following errors
+                {% trans "Please, correct the following errors" %}:
             {% endif %}
         </div>
     {% endif %}
@@ -23,15 +24,15 @@
         {% csrf_token %}
         <input type="hidden" name="next" value="{% url "home" %}">
         <div class="form-group">
-            <label for="login">Ваше і'мя</label>
+            <label for="login">{% trans "Your Name" %}</label>
             <input type="text" class="form-control" id="login" value="" name="username">
             <p class="help-block">{{ form.errors.username.as_data.0.0 }}</p>
         </div>
         <div class="form-group">
-            <label for="password">Пароль</label>
+            <label for="password">{% trans "Your Password" %}</label>
             <input type="password" class="form-control" id="password" value="" name="password">
             <p class="help-block">{{ form.errors.password.as_data.0.0 }}</p>
         </div>
-        <button type="submit" class="btn btn-primary">Вхід</button>
+        <button type="submit" class="btn btn-primary">{% trans "Login" %}</button>
     </form>
 {% endblock content %}
