--- a/studentsdb/templates/registration/profile.html
+++ b/studentsdb/templates/registration/profile.html
@@ -1,5 +1,6 @@
 {% extends "students/base.html" %}
 
+{% load i18n %}
 {% block meta_title %}{{ user.get_full_name|default:user.username }}{% endblock meta_title %}
 
 {% block title %}{{ user.get_full_name|default:user.username }}{% endblock title %}
@@ -9,25 +10,25 @@
 <table class="table table-striped">
     {% if user.email %}
         <tr>
-            <td>Пошта:</td>
+            <td>{% trans "E-mail Adress" %}</td>
             <td>{{ user.email }}</td>
         </tr>
     {% endif %}
     {% if user.username %}
         <tr>
-            <td>Нікнейм</td>
+            <td>{% trans "Nick" %}</td>
             <td>{{ user.username }}</td>
         </tr>
     {% endif %}
     {% if user.stprofile.mobile_phone %}
         <tr>
-            <td>Телефон</td>
+            <td>{% trans "Mobile Phone" %}</td>
             <td>{{ user.stprofile.mobile_phone }}</td>
         </tr>
     {% endif %}
     {% if user.date_joined %}
         <tr>
-            <td>Дата реєстрації</td>
+            <td>{% trans "Registration date" %}</td>
             <td>{{ user.date_joined }}</td>
         </tr>
     {% endif %}
