--- a/students/templates/students/groups_list.html
+++ b/students/templates/students/groups_list.html
@@ -42,7 +42,7 @@
                     {% endif %}
                 </a>
             </th>
-            <th>Дії</th>
+            <th>{% trans "Actions" %}</th>
         </tr>
         </thead>
         <tbody>
