--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -5,15 +5,15 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="{% trans "App to manage students database" %}">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="{% trans "App to manage students database" %}" />
     <title>{% trans "Students Accounting Service" %} - {% block meta_title %}{% endblock meta_title %}</title>
 
     <!-- Bootstrap CSS -->
     {#<link rel="stylesheet" href="{{ PORTAL_URL }}{% static "css/bootstrap.min.css" %}">#}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -24,9 +24,9 @@
 
     <!-- Bootstrap-datetimepicker CSS -->
     {#<link rel="stylesheet" href="{{ PORTAL_URL }}{% static "css/bootstrap-datetimepicker.min.css" %}">#}
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css" />
 
-    <link rel="stylesheet" href="{{ PORTAL_URL }}{% static "css/main.css" %}">
+    <link rel="stylesheet" href="{{ PORTAL_URL }}{% static "css/main.css" %}" />
 
     {% block extra_css %}{% endblock extra_css %}
 
@@ -129,7 +129,7 @@
         <!-- Start footer -->
         <div class="row" id="footer">
             <div class="col-xs-12">
-                {% block footer %}&copy 2016, {% trans "Students Accounting Service" %}{% endblock footer %}
+                {% block footer %}&copy; 2016, {% trans "Students Accounting Service" %}{% endblock footer %}
             </div>
         </div>
         <!-- End footer -->
