--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -12,8 +12,9 @@
     <title>{% trans "Students Accounting Service" %} - {% block meta_title %}{% endblock meta_title %}</title>
 
     <!-- Bootstrap CSS -->
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />-->
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" /> -->
 <link rel="stylesheet" href="{{ PORTAL_URL }}{% static "css/bootstrap.min.css" %}" />
+
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -23,11 +24,9 @@
     <![endif]-->
 
     <!-- Bootstrap-datetimepicker CSS -->
-    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css" />-->
-<link rel="stylesheet" href="{{ PORTAL_URL }}{% static "css/bootstrap-datetimepicker.min.css" %}" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css" />
     <link rel="stylesheet" href="{{ PORTAL_URL }}{% static "css/main.css" %}" />
-
+    <!--<link rel="stylesheet" href="//maxcdn/css/bootstrap.min.css" />-->
     {% block extra_css %}{% endblock extra_css %}
 
 </head>
@@ -166,8 +165,7 @@
     <!-- Javascript Inclusion -->
 
     <!-- jQuery -->
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
-<script src="{{ PORTAL_URL }}{% static "js/jquery.min.js" %}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
     <!-- Moment -->
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>-->
@@ -188,8 +186,7 @@
 <script src="{{ PORTAL_URL }}{% static "js/bootstrap-datetimepicker.min.js" %}"></script>
 
     <!-- jQuery form -->
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js"></script>-->
-<script src="{{ PORTAL_URL }}{% static "js/jquery.form.min.js" %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js"></script>
 
     <script src="{% url 'django.views.i18n.javascript_catalog' %}"></script>
     <script src="{{ PORTAL_URL }}{% static "js/main.js" %}"></script>
