--- a/students/templates/students/events_log.html
+++ b/students/templates/students/events_log.html
@@ -2,6 +2,7 @@
 
 {% load i18n %}
 {% load static from staticfiles %}
+{% load pagenav %}
 
 {% block meta_title %}{% trans "Log" %}{% endblock meta_title %}
 
@@ -36,9 +37,7 @@
 <!-- End Groups Listing -->
 
 <!-- Start Pagination -->
-{% with object_list=events_log baseUrl=events_log_url %}
-    {% include "students/pagination.html" %}
-{% endwith %}
+{% pagenav events_log events_log_url None None None is_paginated paginator %}
 <!-- End Pagination -->
 
 {% endblock content %}
