--- a/students/templates/students/journal.html
+++ b/students/templates/students/journal.html
@@ -2,6 +2,7 @@
 
 {% load i18n %}
 {% load static from staticfiles %}
+{% load pagenav %}
 
 {% block meta_title %}{% trans "Journal" %}{% endblock meta_title %}
 
@@ -72,8 +73,8 @@
         </table>
     {% endif %}
 
-    {% with object_list=students baseUrl=journal_url %}
-        {% include "students/pagination.html" %}
-    {% endwith %}
+<!-- Start Pagination -->
+{% pagenav students journal_url None None cur_month is_paginated paginator %}
+<!-- End Pagination -->
 
 {% endblock content %}
