--- a/students/templates/students/students_list.html
+++ b/students/templates/students/students_list.html
@@ -114,7 +114,7 @@
 <!-- End Students Listing -->
 
 <!-- Start Pagination -->
-{% pagenav students students_url order_by reverse None is_paginated paginator %}
+{% pagenav object_list=students base_url=students_url order_by=order_by reverse=reverse cur_month=None is_paginated=is_paginated paginator=paginator %}
 <!-- End Pagination -->
 
 {% endblock content %}
