--- a/studentsdb/templates/registration/registration_form.html
+++ b/studentsdb/templates/registration/registration_form.html
@@ -7,7 +7,7 @@
 
 {% block status_message %}
     {% if form.errors %}
-        <div class="alert alert-warning" role="alert">
+        <div class="alert alert-danger" role="alert">
             Please, correct the following errors {{ form.non_field_errors }}
         </div>
     {% endif %}
