--- a/studentsdb/templates/registration/registration_form.html
+++ b/studentsdb/templates/registration/registration_form.html
@@ -8,7 +8,7 @@
 {% block status_message %}
     {% if form.errors %}
         <div class="alert alert-danger" role="alert">
-            Please, correct the following errors {{ form.non_field_errors }}
+            Please, correct the following errors: {{ form.non_field_errors }}
         </div>
     {% endif %}
 {% endblock %}
