--- a/students/templates/students/pagination.html
+++ b/students/templates/students/pagination.html
@@ -2,21 +2,15 @@
     <nav>
         <ul class="pagination">
             <li>
-                <a href="{{ base_url }}?page=1{%if order_by %}&amp;order_by={{ order_by }}{%endif %}{% if reverse %}&amp;reverse={{ reverse }}{% endif %}{% if cur_month %}&amp;month={{ cur_month }}{% endif %}" class="content-link">
-                    &laquo;
-                </a>
+                <a href="{{ base_url }}?page=1{%if order_by %}&amp;order_by={{ order_by }}{%endif %}{% if reverse %}&amp;reverse={{ reverse }}{% endif %}{% if cur_month %}&amp;month={{ cur_month }}{% endif %}" class="content-link">&laquo;</a>
             </li>
             {% for p in paginator.page_range %}
                 <li {% if object_list.number == p %}class="active"{% endif %}>
-                    <a href="{{ base_url }}?page={{ p }}{%if order_by %}&amp;order_by={{ order_by }}{% endif %}{% if reverse %}&amp;reverse={{ reverse }}{% endif %}{% if cur_month %}&amp;month={{ cur_month }}{% endif %}" class="content-link">
-                        {{ p }}
-                    </a>
+                    <a href="{{ base_url }}?page={{ p }}{%if order_by %}&amp;order_by={{ order_by }}{% endif %}{% if reverse %}&amp;reverse={{ reverse }}{% endif %}{% if cur_month %}&amp;month={{ cur_month }}{% endif %}" class="content-link">{{ p }}</a>
                 </li>
             {% endfor %}
             <li>
-                <a href="{{ base_url }}?page={{ paginator.num_pages }}{%if order_by %}&amp;order_by={{ order_by }}{% endif %}{% if reverse %}&amp;reverse={{ reverse }}{% endif %}{% if cur_month %}&amp;month={{ cur_month }}{% endif %}" class="content-link">
-                    &raquo;
-                </a>
+                <a href="{{ base_url }}?page={{ paginator.num_pages }}{%if order_by %}&amp;order_by={{ order_by }}{% endif %}{% if reverse %}&amp;reverse={{ reverse }}{% endif %}{% if cur_month %}&amp;month={{ cur_month }}{% endif %}" class="content-link">&raquo;</a>
             </li>
         </ul>
     </nav>
